Bug 783405 - Remember the y-positions used for estimating space above and below for the dropdown.  r=smaug,roc